Added quarantine sites module

--- a/veoc/templates/veoc/main_template.html
+++ b/veoc/templates/veoc/main_template.html
@@ -320,6 +320,9 @@
                     <a href="/users_list">Users</a>
                 </li>
                 <li>
+                    <a href="/site_list">Quarantine Sites</a>
+                </li>
+                <li>
                     <a href="/disgnation_list">Designation</a>
                 </li>
                 <li>
