View quarantine sites on the qurantine list of cases

--- a/veoc/templates/veoc/quarantine_list.html
+++ b/veoc/templates/veoc/quarantine_list.html
@@ -72,8 +72,8 @@
                             <td>{{ follow.passport_number }}</td>
                             <td>{{ follow.nationality }}</td>
                             <td>{{ follow.origin_country }}</td>
-                            <!-- <td>{{ follow.quarantine_site.site_name }}</td> -->
-                            <td>{{ follow.place_of_diagnosis }}</td>
+                            <td>{{ follow.quarantine_site.site_name }}</td>
+                            <!-- <td>{{ follow.place_of_diagnosis }}</td> -->
                             <td>{{ follow.date_of_contact }}</td>
                             <td>{{ follow.created_by.username }}</td>
                             <td>
