--- a/veoc/templates/veoc/quarantine_list.html
+++ b/veoc/templates/veoc/quarantine_list.html
@@ -98,6 +98,7 @@
                                data-nationality="{{ follow.nationality }}"
                                data-origin_country="{{ follow.origin_country }}"
                                data-place_of_diagnosis="{{ follow.place_of_diagnosis }}"
+                               data-quarantine_site="{{ follow.quarantine_site.site_name }}"
                                data-nok="{{ follow.nok }}"
                                data-nok_phone_num="{{ follow.nok_phone_num }}"
                                data-cormobidity="{{ follow.cormobidity }}"
