--- a/veoc/templates/veoc/dashboard.html
+++ b/veoc/templates/veoc/dashboard.html
@@ -122,6 +122,18 @@
     </div>
 
     <div class="row">
+        <div class="col-sm-12">
+            <div class="well">
+                <div class="panel-heading" style="background-color:#3c8dbc">
+                    <h2 class="panel-title" align="center" style="color: #ffffff">. </h2>
+                </div>
+                <div id="covid_container" style="height:300px;width:100%;">
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="row">
         <div class="col-sm-6">
 
             <div class="well">
@@ -155,7 +167,7 @@
         </div>
     </div>
 
-    <div class="row">
+    <!-- <div class="row">
       <div class="col-sm-6">
 
           <div class="well">
@@ -185,7 +197,7 @@
               <div id="piechartEvents" style="height: 300px; width: 100%;"></div>
           </div>
       </div>
-    </div>
+    </div> -->
 
     <div class="row">
         <div class="col-md-12">
@@ -268,7 +280,7 @@
         // Create the chart
         var valx = []
 
-        console.log("thirty_days_stat length : " + '{{ thirty_days_stat| length }}');
+        // console.log("thirty_days_stat length : " + '{{ thirty_days_stat| length }}');
 
         {% if thirty_days_stat %}
             {% for key, value in thirty_days_stat.items %}
@@ -316,7 +328,112 @@
                 data: valx
             }],
         });
-    });
+
+        var centers = []
+        var completed = []
+        var ongoing = []
+        var combination = []
+        {% if quarantine_ongoing_cases %}
+            console.log("{{ quarantine_ongoing_cases.items }}")
+            {% for key, value in quarantine_ongoing_cases.items %}
+                centers.push('{{ key }}')
+                ongoing.push({{ value }})
+            {% endfor %}
+        {% else %}
+          console.log("No completed quarantine data to plot")
+            // valx.push({name: 'None', y: 0, drilldown: 'None'})
+        {% endif %}
+
+        {% if quarantine_completed_cases %}
+            console.log("{{ quarantine_completed_cases.items }}")
+            {% for key, value in quarantine_completed_cases.items %}
+                completed.push({{ value }})
+            {% endfor %}
+        {% else %}
+          console.log("No ongoing quarantine data to plot")
+            // valx.push({name: 'None', y: 0, drilldown: 'None'})
+        {% endif %}
+
+        console.log(ongoing)
+        console.log(centers)
+        console.log(completed)
+
+        // covid-19 Quarantine Centres Bargraph
+        var chart = Highcharts.chart('covid_container', {
+
+          chart: {
+              type: 'column'
+          },
+
+          title: {
+              text: 'COVID-19 QUARANTINE SITES REPRESENTATION'
+          },
+
+          subtitle: {
+              text: 'Hover the graphs to see actial numbers'
+          },
+
+          legend: {
+              align: 'right',
+              verticalAlign: 'middle',
+              layout: 'vertical'
+          },
+
+          xAxis: {
+              categories: centers,
+              labels: {
+                  x: -10
+              }
+          },
+
+          yAxis: {
+              allowDecimals: false,
+              title: {
+                  text: 'Number of Cases'
+              }
+          },
+
+          series: [{
+              name: 'Ongoing Quarantine Cases',
+              data: ongoing
+          }, {
+              name: 'Completed Quarantine Cases',
+              data: completed
+          }],
+
+          responsive: {
+              rules: [{
+                  condition: {
+                      maxWidth: 500
+                  },
+                  chartOptions: {
+                      legend: {
+                          align: 'center',
+                          verticalAlign: 'bottom',
+                          layout: 'horizontal'
+                      },
+                      yAxis: {
+                          labels: {
+                              align: 'left',
+                              x: 0,
+                              y: -5
+                          },
+                          title: {
+                              text: null
+                          }
+                      },
+                      subtitle: {
+                          text: null
+                      },
+                      credits: {
+                          enabled: false
+                      }
+                  }
+              }]
+          }
+      });
+
+  });
 
   // This function takes deseases data and should be used to populate the pie chart on the dashboard
   function testing() {
