--- a/veoc/templates/veoc/quarantine_registration_form.html
+++ b/veoc/templates/veoc/quarantine_registration_form.html
@@ -110,8 +110,8 @@
                      </div>
                      <div class="form-row" id="diagnosis_status_div">
                        <div class="form-group col-md-6">
-                         <label for="status">Place of Diagnosis : *</label>
-                         <input class="form-control" type="text" id="place_of_diagnosis" name="place_of_diagnosis" size="45" placeholder="place of diagnosis" required/>
+                         <label for="status">Place of Diagnosis : </label>
+                         <input class="form-control" type="text" id="place_of_diagnosis" name="place_of_diagnosis" size="45" placeholder="place of diagnosis"/>
                        </div>
                        <div class="form-group col-md-6">
                          <label for="datereport">Date of Arrival : *</label>
