--- a/veoc/templates/veoc/subcounty_dashboard.html
+++ b/veoc/templates/veoc/subcounty_dashboard.html
@@ -38,6 +38,22 @@
     </div>
 
     <div class="row">
+      <div class="col-md-3">
+          <div class="well" style="border-color: #a94442">
+              <div class="small-box bg-aqua">
+                  <div class="inner" style="height: 100px; width: 100%; ">
+                      <h4><b> COVID-19 Quarantine</b></h4>
+                      <h6>Total Quarantine : {{ total_cor_quarantine }} Cases</h6>
+                      <h6>Ongoing Quarantine : {{ total_ongoing_quarantine }} Cases</h6>
+                      <h6>Completed Quarantine : {{ total_completed_quarantine }} Cases</h6>
+                  </div>
+                  <div class="icon">
+                      <i class="ion ion-bag"></i>
+                  </div>
+                  <a href="/quarantine_list/" class="btn btn-primary">More infor</a>
+              </div>
+          </div>
+      </div>
         <div class="col-md-3">
             <div class="well" style="border-color: #a94442">
                 <div class="small-box bg-aqua">
@@ -88,7 +104,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-md-3">
+        <!-- <div class="col-md-3">
             <div class="well" style="border-color: #a94442">
                 <div class="small-box bg-red">
                     <div class="inner" style="height: 100px; width: 100%;">
@@ -101,6 +117,18 @@
                         <i class="ion ion-pie-graph"></i>
                     </div>
                     <a href="/week_shift" class="btn btn-primary">More infor</a>
+                </div>
+            </div>
+        </div> -->
+    </div>
+
+    <div class="row">
+        <div class="col-sm-12">
+            <div class="well">
+                <div class="panel-heading" style="background-color:#3c8dbc">
+                    <h2 class="panel-title" align="center" style="color: #ffffff">. </h2>
+                </div>
+                <div id="covid_container" style="height:300px;width:100%;">
                 </div>
             </div>
         </div>
@@ -140,7 +168,7 @@
         </div>
     </div>
 
-    <div class="row">
+    <!-- <div class="row">
       <div class="col-sm-6">
 
           <div class="well">
@@ -170,7 +198,7 @@
               <div id="piechartEvents" style="height: 300px; width: 100%;"></div>
           </div>
       </div>
-    </div>
+    </div> -->
 
     <div class="row">
         <div class="col-md-12">
@@ -303,6 +331,111 @@
                 data: valx
             }],
         });
+
+        var centers = []
+        var completed = []
+        var ongoing = []
+        var combination = []
+        {% if quarantine_ongoing_cases %}
+            console.log("{{ quarantine_ongoing_cases.items }}")
+            {% for key, value in quarantine_ongoing_cases.items %}
+                centers.push('{{ key }}')
+                ongoing.push({{ value }})
+            {% endfor %}
+        {% else %}
+          console.log("No completed quarantine data to plot")
+            // valx.push({name: 'None', y: 0, drilldown: 'None'})
+        {% endif %}
+
+        {% if quarantine_completed_cases %}
+            console.log("{{ quarantine_completed_cases.items }}")
+            {% for key, value in quarantine_completed_cases.items %}
+                completed.push({{ value }})
+            {% endfor %}
+        {% else %}
+          console.log("No ongoing quarantine data to plot")
+            // valx.push({name: 'None', y: 0, drilldown: 'None'})
+        {% endif %}
+
+        console.log(ongoing)
+        console.log(centers)
+        console.log(completed)
+
+        // covid-19 Quarantine Centres Bargraph
+        var chart = Highcharts.chart('covid_container', {
+
+          chart: {
+              type: 'column'
+          },
+
+          title: {
+              text: 'COVID-19 COUNTY QUARANTINE SITES REPRESENTATION'
+          },
+
+          subtitle: {
+              text: 'Hover the graphs to see actial numbers'
+          },
+
+          legend: {
+              align: 'right',
+              verticalAlign: 'middle',
+              layout: 'vertical'
+          },
+
+          xAxis: {
+              categories: centers,
+              labels: {
+                  x: -10
+              }
+          },
+
+          yAxis: {
+              allowDecimals: false,
+              title: {
+                  text: 'Number of Cases'
+              }
+          },
+
+          series: [{
+              name: 'Ongoing Quarantine Cases',
+              data: ongoing
+          }, {
+              name: 'Completed Quarantine Cases',
+              data: completed
+          }],
+
+          responsive: {
+              rules: [{
+                  condition: {
+                      maxWidth: 500
+                  },
+                  chartOptions: {
+                      legend: {
+                          align: 'center',
+                          verticalAlign: 'bottom',
+                          layout: 'horizontal'
+                      },
+                      yAxis: {
+                          labels: {
+                              align: 'left',
+                              x: 0,
+                              y: -5
+                          },
+                          title: {
+                              text: null
+                          }
+                      },
+                      subtitle: {
+                          text: null
+                      },
+                      credits: {
+                          enabled: false
+                      }
+                  }
+              }]
+          }
+      });
+
     });
 
   // This function takes deseases data and should be used to populate the pie chart on the dashboard
