jeffa local changes manually merged

--- a/veoc/templates/veoc/county_dashboard.html
+++ b/veoc/templates/veoc/county_dashboard.html
@@ -126,6 +126,27 @@
     </div>
 
     <div class="row">
+      <div class="col-md-6">
+          <div class="well" style="border-color: #a94442">
+              <!-- <div class="small-box bg-aqua"> -->
+                  <div class="inner" style="height: 10px; width: 100%; ">
+                      <h5><b> Total Quarantine Case Responses : {{ total_follow_up_stat }} Cases</b></h5>
+                  </div>
+              <!-- </div> -->
+          </div>
+      </div>
+      <div class="col-md-6">
+          <div class="well" style="border-color: #a94442">
+              <!-- <div class="small-box bg-aqua"> -->
+                  <div class="inner" style="height: 10px; width: 100%; ">
+                      <h5><b> Quarantine Case Responses Today : {{ today_follow_up_stat }} Cases</b></h5>
+                  </div>
+              <!-- </div> -->
+          </div>
+      </div>
+    </div>
+
+    <div class="row">
         <div class="col-sm-12">
             <div class="well">
                 <div class="panel-heading" style="background-color:#3c8dbc">
