--- a/veoc/templates/veoc/dashboard.html
+++ b/veoc/templates/veoc/dashboard.html
@@ -125,6 +125,27 @@
     </div>
 
     <div class="row">
+      <div class="col-md-6">
+          <div class="well" style="border-color: #a94442">
+              <div class="small-box bg-aqua">
+                  <div class="inner" style="height: 10px; width: 100%; ">
+                      <h5><b> Total Quarantine Case Responders :</b> {{ total_follow_up_stat }} Responders</h5>
+                  </div>
+              </div>
+          </div>
+      </div>
+      <div class="col-md-6">
+          <div class="well" style="border-color: #a94442">
+              <!-- <div class="small-box bg-aqua"> -->
+                  <div class="inner" style="height: 10px; width: 100%; ">
+                      <h5><b> Quarantine Case Responders Today :</b> {{ today_follow_up_stat }} Responder(s)</h5>
+                  </div>
+              <!-- </div> -->
+          </div>
+      </div>
+    </div>
+
+    <div class="row">
         <div class="col-sm-12">
             <div class="well">
                 <div class="panel-heading" style="background-color:#3c8dbc">
