--- a/veoc/templates/veoc/main_template.html
+++ b/veoc/templates/veoc/main_template.html
@@ -205,6 +205,7 @@
                   <li><a href="/quarantine_list">Self Quarantine List</a></li>
                   <li><a href="/follow_up">Ongoing Quarantine</a></li>
                   <li><a href="/complete_quarantine">Completed Quarantine</a></li>
+                  <li><a href="/quarantine_site_report">Quarantine Site Report</a></li>
               </ul>
           </li>
           <li>
